<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright © 2018 The Superior OS Project

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="komodo_settings_title">Customization</string>
    <string name="komodo_dashboard_summary">Custom your rom</string>

    <!-- Categories -->
    <string name="animations_title">Animations</string>
    <string name="interface_title">Interface</string>
    <string name="button_title">Buttons</string>
    <string name="gestures_title">Gestures</string>
    <string name="lockscreen_title">Lock Screen</string>

    <string name="game_space_title">Game Space</string>
    <string name="game_space_summary">Enhance your gaming experience</string>

    <string name="misc_title">Miscellaneous</string>
    <string name="misc_summary">Advanced restart, playback control</string>

    <string name="monet_title">Monet Engine</string>
    <string name="monet_summary">Custom color, white luminance, etc</string>

    <string name="navbar_title">Navigation Bar</string>
    <string name="navbar_summary">Custom actions, layout</string>

    <string name="powermenu_title">Power Menu</string>
    <string name="quicksettings_title">Quick Settings</string>

    <string name="statusbar_title">Status Bar</string>
    <string name="statusbar_summary">Network traffic, tap to sleep</string>

    <string name="notifications_title">Notifications</string>
    <string name="network_traffics_category">Network Traffic</string>

    <!-- Double Tap to Sleep Statusbar -->
    <string name="double_tap_sleep_gesture_title">Tap to sleep</string>
    <string name="double_tap_sleep_gesture_summary">Double-tap anywhere on the status bar to put the device to sleep</string>

    <!-- Global Actions -->
    <string name="global_actions_advanced_reboot_title">Enable advanced restart</string>
    <string name="global_actions_advanced_reboot_summary">Show options for recovery and bootloader in power menu</string>

    <!-- Volume rocker music control -->
    <string name="volume_button_music_control_title">Playback control</string>
    <string name="volume_button_music_control_summary">When the screen is off, long-pressing the volume keys will skip music tracks</string>

    <!-- Network Traffic -->
    <string name="network_traffic_state_title">Show network traffic</string>
    <string name="network_traffic_location_title">Location</string>
    <string name="network_traffic_disabled">Disabled</string>
    <string name="network_traffic_statusbar">Status bar</string>
    <string name="network_traffic_qs_header">QS header</string>
    <string name="network_traffic_mode_title">Display mode</string>
    <string name="network_traffic_dynamic">Dynamic</string>
    <string name="network_traffic_download">Download</string>
    <string name="network_traffic_upload">Upload</string>
    <string name="network_traffic_autohide_threshold_title">Auto-hide threshold</string>
    <string name="network_traffic_refresh_interval_title">Refresh interval</string>

    <!-- Monet Engine -->
    <string name="monet_engine_custom_color_title">Use custom color</string>
    <string name="monet_engine_custom_color_summary">Use custom color for monet engine instead of wallpaper colors</string>
    <string name="monet_engine_color_override_title">Custom color</string>
    <string name="monet_engine_white_luminance_user_title">White luminance</string>
    <string name="monet_engine_accurate_shades_title">Use accurate shades</string>
    <string name="monet_engine_chroma_factor_title">Chroma factor</string>
    <string name="monet_engine_linear_lightness_title">Use linear lightness</string>

    <!-- UI debug setting: show CPU info? [CHAR LIMIT=25] -->
    <string name="show_cpu_info">Show CPU info</string>
    <!-- UI debug setting: show cpu usage summary [CHAR LIMIT=50] -->
    <string name="show_cpu_info_summary">Screen overlay showing current CPU info</string>

    <!-- Navigation bar -->
    <string name="navigation_bar_title">Navigation bar toogle</string>
    <string name="navigation_bar_summary">Enable on-screen navigation keys</string>
    <string name="home_key_title">Home button</string>
    <string name="back_key_title">Back button</string>
    <string name="menu_key_title">Menu button</string>
    <string name="assist_key_title">Assist button</string>
    <string name="app_switch_key_title">Recents button</string>
    <string name="camera_key_title">Camera button</string>
    <string name="short_press_title">Short press action</string>
    <string name="long_press_title">Long press action</string>
    <string name="double_tap_title">Double tap action</string>
    <string name="app_picker_dialog_title">Select an app</string>
    <string name="long_press_custom_app_title">Long press custom app</string>
    <string name="double_tap_custom_app_title">Double tap custom app</string>

    <!-- Custom actions -->
    <string name="action_nothing">No action</string>
    <string name="action_menu">Menu</string>
    <string name="action_app_switch">Recents</string>
    <string name="action_search">Assistant</string>
    <string name="action_voice_search">Voice search</string>
    <string name="action_launch_camera">Camera</string>
    <string name="action_last_app">Last app</string>
    <string name="action_splitscreen">Split screen</string>
    <string name="action_flashlight">Flashlight</string>
    <string name="action_clear_notifications">Clear notifications</string>
    <string name="action_volume_panel">Volume panel</string>  
    <string name="action_screen_off">Screen off</string>
    <string name="action_notifications">Notifications</string>
    <string name="action_power_menu">Power menu</string>
    <string name="action_screenshot">Screenshot</string>
    <string name="action_qs_panel">QS panel</string>
    <string name="action_app_action">Application</string>
    <string name="action_ringer_modes">Ringer modes</string>
    <string name="kill_app">Kill app</string>
    <string name="partial_screenshot">Partial screenshot</string>

    <!-- Long back swipe options -->
    <string name="right_swipe_key_title">Right swipe</string>
    <string name="left_swipe_key_title">Left swipe</string>
    <string name="long_back_swipe_timeout_title">Long swipe action timeout</string>
    <string name="left_swipe_actions_title">Long left swipe action</string>
    <string name="left_swipe_app_action_title">Select long left swipe app</string>
    <string name="right_swipe_actions_title">Long right swipe action</string>
    <string name="left_vertical_swipe_key_title">Left L swipe</string>
    <string name="right_vertical_swipe_key_title">Right L swipe</string>
    <string name="right_swipe_app_action_title">Select long right swipe app</string>
    <string name="left_vertical_swipe_actions_title">Vertical left swipe action</string>
    <string name="left_vertical_swipe_app_action_title">Select vertical left swipe app</string>
    <string name="right_vertical_swipe_actions_title">Vertical right swipe action</string>
    <string name="right_vertical_swipe_app_action_title">Select vertical right swipe app</string>
    <string name="gesture_nav_tweaks_footer_info">To choose a specific app activity for the action, long press on any app in the apps picker.\n\nIf launcher is showing, do the swipe at the very bottom area of the screen to trigger the action.</string>
    <string name="back_swipe_app_select_summary">Select an app to launch with the back gesture</string>
    <string name="back_swipe_extended_title">Extended swipe action</string>
    <string name="back_swipe_extended_summary">Trigger action on wider swipe (more than half of display size), or a L swipe (vertically longer enough)</string>
    <string name="back_gesture_haptic_title">Haptic feedback</string>
    <string name="back_gesture_haptic_summary">Enable haptic tick effect on back gesture</string>

    <!-- HW keys -->
    <string name="hw_keys_swap_title">Swap hardware buttons</string>
    <string name="hw_keys_swap_summary">Swap the order of recents and back buttons</string>

    <!-- Statusbar Tuner -->
    <string name="statusbar_items_title">Tuner Statusbar icons</string>
    <string name="statusbar_items_summary">Toggle the visibility of icons in statusbar</string>

    <!-- Navigation bar -->
    <string name="navigation_bar_layout_title">Layout</string>
    <string name="navigation_bar_layout_summary">Customize the layout of the navigation bar</string>

</resources>
