<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright © 2018 Superior OS Project

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/komodo_settings_title" >

        <!-- Status Bar -->
        <Preference
            android:key="statusbar_category"
            android:title="@string/statusbar_title"
            android:summary="@string/statusbar_summary"
            android:fragment="com.komodo.settings.fragments.StatusbarSettings"
            android:icon="@drawable/ic_settings_statusbar"/>

        <!-- Notifications -->
        <Preference
            android:key="notifications_category"
            android:title="@string/notifications_title"
            android:summary="@string/notifications_summary"
            android:fragment="com.komodo.settings.fragments.NotificationSettings"
            android:icon="@drawable/ic_settings_notifications"/>

        <!-- Navigation Bar -->
        <Preference
            android:key="navigationbar_category"
            android:title="@string/navbar_title"
            android:summary="@string/navbar_summary"
            android:fragment="com.komodo.settings.fragments.NavbarSettings"
            android:icon="@drawable/ic_settings_navbar"/>

        <!-- Monet -->
        <Preference
            android:key="monet_category"
            android:title="@string/monet_title"
            android:summary="@string/monet_summary"
            android:fragment="com.komodo.settings.fragments.MonetSettings"
            android:icon="@drawable/ic_settings_quicksettings"/>

        <!-- Game Space -->
        <Preference
            android:key="game_space_category"
            android:icon="@drawable/ic_game_space"
            android:title="@string/game_space_title"
            android:summary="@string/game_space_summary" >
            <intent android:action="com.android.settings.action.EXTRA_SETTINGS"
                android:targetPackage="io.chaldeaprjkt.gamespace"
                android:targetClass="io.chaldeaprjkt.gamespace.settings.SettingsActivity" >
            <extra
                android:name="referer"
                android:value="com.komodo.settings" />
            </intent>
        </Preference>

        <!-- Misc -->
        <Preference
            android:key="misc_category"
            android:title="@string/misc_title"
            android:summary="@string/misc_summary"
            android:fragment="com.komodo.settings.fragments.MiscSettings"
            android:icon="@drawable/ic_settings_misc"/>

        <!-- Buttons 
        <com.komodo.settings.preferences.CardviewPreference
            android:key="buttonsettings_category"
            android:title="@string/button_title"
            android:fragment="com.komodo.settings.fragments.ButtonSettings"
            android:icon="@drawable/ic_settings_buttons"/>-->

        <!-- Disabled - Lock Screen
        <com.komodo.settings.preferences.CardviewPreference
            android:key="lockscreen_category"
            android:title="@string/lockscreen_title"
            android:fragment="com.komodo.settings.fragments.LockscreenSettings"
            android:icon="@drawable/ic_settings_lockscreen"/> -->

        <!-- Power Menu
        <com.komodo.settings.preferences.CardviewPreference
            android:key="powermenu__category"
            android:title="@string/powermenu_title"
            android:fragment="com.komodo.settings.fragments.PowermenuSettings"
            android:icon="@drawable/ic_settings_powermenu"/>-->

        <!-- Quick Settings panel
        <com.komodo.settings.preferences.CardviewPreference
            android:key="quicksettings_category"
            android:title="@string/quicksettings_title"
            android:fragment="com.komodo.settings.fragments.QuickSettings"
            android:icon="@drawable/ic_settings_quicksettings"/>-->

</PreferenceScreen>
