<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2018 The Superior OS Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/statusbar_title"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <com.bianca.support.preferences.SystemSettingSwitchPreference
        android:key="double_tap_sleep_gesture"
        android:title="@string/double_tap_sleep_gesture_title"
        android:summary="@string/double_tap_sleep_gesture_summary"
        android:defaultValue="false" />

    <PreferenceCategory
        android:title="@string/network_traffics_category" >

        <com.bianca.support.preferences.SystemSettingSwitchPreference
            android:key="network_traffic_state"
            android:title="@string/network_traffic_state_title"
            android:defaultValue="false" />

         <com.bianca.support.preferences.CustomSeekBarPreference
            android:key="network_traffic_autohide_threshold"
            android:title="@string/network_traffic_autohide_threshold_title"
            android:max="10"
            settings:min="0"
            android:defaultValue="0"
            settings:units="KB/s" />

        <com.bianca.support.preferences.SystemSettingListPreference
            android:key="network_traffic_location"
            android:title="@string/network_traffic_location_title"
            android:entries="@array/network_traffic_location_entries"
            android:entryValues="@array/network_traffic_location_values"
            android:defaultValue="0"
            android:dependency="network_traffic_state" />

    </PreferenceCategory>

</PreferenceScreen>
